# toss-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/: tossinvest-openapi-ai-reference.md  tossinvest-openapi-examples.md
scripts/: param_sweep.py
src/toss_bot/: backtest.py  brokers.py  cli.py  config.py  db.py  execution.py  fx.py  market_calendar.py  market_filter.py  markets.py  models.py  notifications.py  order_reconcile.py  reports.py  risk.py  runner.py  scheduler.py  strategy.py  toss_client.py  universe.py  utils.py
tests/: test_backtest.py  test_brokers.py  test_cli.py  test_execution.py  test_market_calendar.py  test_market_filter.py  test_order_reconcile.py  test_reports.py  test_risk_state.py  test_runner.py  test_strategy_and_risk.py  test_toss_client.py  test_universe.py  test_utils.py
